# nannys-culture-kitchen

./: .env.example  QUICKSTART.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
agents/: AGENTS.md  SOUL.md
rust/: Cargo.toml  README.md
rust/prompts/: system.txt
rust/src/: main.rs
rust/src/routes/: chat.rs  grants.rs  mod.rs  store.rs
src/: App.tsx  index.css
src/components/: AllergenScanner.tsx  RecipeShare.tsx  VideoHero.tsx
src/components/cinematic/: CurtainReveal.tsx  KineticMarquee.tsx  MeshGradientHero.tsx  ParticleButton.tsx  TextScramble.tsx  index.ts
src/components/intro/: ChefSelector.tsx  CinematicIntro.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/meal-planner/: MealPlannerCalendar.tsx  MealPlannerDay.tsx
src/components/recipe/: RecipeCard.tsx  RecipeGrid.tsx
src/components/shopping-list/: ShoppingList.tsx
src/data/: latin-recipes.ts  resources.ts  soul-food-recipes.ts
src/lib/: allergens.ts  brand.ts  chatgpt-client.ts  humanizer.ts  language-context.tsx  motion.ts  stripe-client.ts  vapi-client.ts
src/pages/: CateringAgent.tsx  ChefDashboard.tsx  EarningsPage.tsx  HealthHub.tsx  Index.tsx  InteractiveMenu.tsx  LatinKitchen.tsx  LatinRecipeDetail.tsx  MealPlanner.tsx  NannyDashboard.tsx  NotFound.tsx  OperationsPage.tsx  RecipeDetail.tsx  Recipes.tsx  ResourcesPage.tsx  Search.tsx  ShoppingListPage.tsx  SoulFoodKitchen.tsx  SoulFoodRecipeDetail.tsx  StorePage.tsx
